--- a/android/build.gradle
+++ b/android/build.gradle
@@ -47,9 +47,30 @@ dependencies {
   if (isDev(project)) {
     implementation fileTree(dir: "libs", include: ["*.jar"])
   } else {
-     api 'io.agora.rtc:iris-rtc:4.0.0-rc.2'
-     api 'io.agora.rtc:agora-special-full:4.0.0.5'
-     implementation 'io.agora.rtc:full-screen-sharing:4.0.0.5'
+    def agora_sdk_version = "4.0.1"
+    api 'io.agora.rtc:iris-rtc:4.0.0-rc.2'
+    //  api 'io.agora.rtc:agora-special-full:4.0.0.5'
+    //  implementation 'io.agora.rtc:full-screen-sharing:4.0.0.5'
+    implementation "io.agora.rtc:voice-rtc-basic:${agora_sdk_version}"
+    implementation "io.agora.rtc:spatial-audio:${agora_sdk_version}"
+    implementation "io.agora.rtc:audio-beauty:${agora_sdk_version}"
+    //  implementation 'io.agora.rtc:voice-sdk:4.0.1'
+    
+    // implementation 'io.agora.rtc:voice-ains:3.6.2'
+    // implementation 'io.agora.rtc::ains:4.0.1'
+    // implementation 'io.agora.rtc:full-audio-format:4.0.0.5'
+    // implementation 'io.agora.rtc:spatial-audio:4.0.0.5'
+
+    // implementation 'io.agora.rtc:voice-rtc-basic'
+    // implementation 'io.agora.rtc:voice-rtc-basic'
+    // implementation 'io.agora.rtc:voice-rtc-basic'
+
+
+
+//      implementation 'io.agora.rtc:full-rtc-basic:3.7.0.3'
+//   implementation 'io.agora.rtc:full-ains:3.6.2'
+// //   implementation 'io.agora.rtc:full-jnd:3.7.0.3'
+//   implementation 'io.agora.rtc:full-full-audio-format:3.6.2'
   }
 }
 
