--- a/android/build.gradle
+++ b/android/build.gradle
@@ -47,13 +47,15 @@ dependencies {
   if (isDev(project)) {
     implementation fileTree(dir: "libs", include: ["*.jar"])
   } else {
-    def agora_sdk_version = "4.0.1"
+    // def agora_sdk_version = "4.0.1"
+    def agora_sdk_version = "4.0.0.4"
     api 'io.agora.rtc:iris-rtc:4.0.0-rc.2'
     //  api 'io.agora.rtc:agora-special-full:4.0.0.5'
     //  implementation 'io.agora.rtc:full-screen-sharing:4.0.0.5'
     implementation "io.agora.rtc:voice-rtc-basic:${agora_sdk_version}"
-    implementation "io.agora.rtc:spatial-audio:${agora_sdk_version}"
+    // implementation "io.agora.rtc:spatial-audio:${agora_sdk_version}"
     implementation "io.agora.rtc:audio-beauty:${agora_sdk_version}"
+    implementation "io.agora.rtc:ains:${agora_sdk_version}"
     //  implementation 'io.agora.rtc:voice-sdk:4.0.1'
     
     // implementation 'io.agora.rtc:voice-ains:3.6.2'
